# graphic_graphic_3d

./: .clang-format  AGENTS.md  AGENTS_COMMIT_RULES.md  CLAUDE.md  LICENSE  OAT.xml  README.en.md  README.md  README_en.md  README_zh.md  bundle.json
3d_scene_adapter/: AGENTS.md  BUILD.gn
3d_scene_adapter/include/scene_adapter/: fg_component.h  fg_module.h  intf_camera_utils.h  intf_mrt_depth_adapter.h  intf_offscreen_scene.h  intf_scene_adapter.h  intf_surface_buffer_info.h  intf_surface_stream.h  scene_adapter.h  scene_bridge.h  scene_bridge_ani.h  scene_bridge_ani_loader.h  sr_module.h  surface_stream.h
3d_scene_adapter/src/: camera_utils.cpp  fg_module.cpp  fg_moudle.cpp  mrt_depth_adapter.cpp  offscreen_scene.cpp  scene_adapter.cpp  scene_bridge.cpp  scene_bridge_ani.cpp  scene_bridge_ani_loader.cpp  sr_module.cpp  surface_stream.cpp
3d_scene_adapter/test/: BUILD.gn  mrt_depth_adapter_unit_test.cpp  offscreen_render_unit_test.cpp  scene_adapter_unit_test.cpp  scene_bridge_ani_unit_test.cpp  scene_bridge_unit_test.cpp  surface_stream_unit_test.cpp
3d_widget_adapter/: BUILD.gn
3d_widget_adapter/core/include/: lume_render_config.h  pointer_event.h  widget_qos.h  widget_trace.h
3d_widget_adapter/core/src/: engine_factory.cpp  lume_render_config.cpp  scene_view_core.cpp
3d_widget_adapter/include/: engine_factory.h  graphics_manager_common.h  graphics_task.h  i_engine.h  offscreen_context.h  offscreen_context_helper.h  scene_viewer_adapter.h  texture_info.h  widget_adapter.h
3d_widget_adapter/include/custom/: custom_render_descriptor.h  shader_input_buffer.h
3d_widget_adapter/include/data_type/: constants.h  gltf_animation.h  light.h  pointer_event.h  position.h  quaternion.h  scene_viewer_touch_event.h  vec3.h
3d_widget_adapter/include/ohos/: 3d_widget_adapter_log.h  graphics_manager.h  platform_data.h  texture_layer.h
3d_widget_adapter/src/: graphics_manager_common.cpp  graphics_task.cpp  offscreen_context.cpp  offscreen_context_helper.cpp  scene_viewer_adapter.cpp  widget_adapter.cpp
3d_widget_adapter/src/ohos/: graphics_manager.cpp  texture_layer.cpp
3d_widget_adapter/test/: 3d_utils_test.cpp  3d_weather_theme_phys_test.cpp  3d_widget_adapter_test.cpp  3d_widget_adapter_test.h  BUILD.gn  data_type_unit_test.cpp  engine_factory_test.cpp  geometry_unit_test.cpp  graphics_manager_common_unit_test.cpp  graphics_manager_unit_test.cpp  graphics_task_unit_test.cpp  lume_custom_render_unit_test.cpp  offscreen_context_helper_unit_test.cpp  shader_input_buffer_unit_test.cpp  texture_layer_unit_test.cpp
3d_widget_adapter/test/core/: BUILD.gn  engine_factory_test.cpp  engine_service_test.cpp  i_engine_test.cpp  scene_view_core_test.cpp  texture_layer_test.cpp
camera_preview_plugin/: BUILD.gn
camera_preview_plugin/api/cam_preview/: implementation_uids.h  namespace.h
camera_preview_plugin/assets/pipelinelayouts/: camera_stream.shaderpl
camera_preview_plugin/src/: component_dll.cpp
kits/ets/: AGENTS.md  BUILD.gn
kits/ets/docs/: ARKTS_STATIC_API_GUIDE.md
kits/ets/include/: AnimationETS.h  BloomETS.h  CameraETS.h  ColorFringeETS.h  ColorProxy.h  EffectETS.h  EntityProxy.h  EnvironmentETS.h  GeometryETS.h  ImageETS.h  LightETS.h  MaterialETS.h  MaterialPropertyETS.h  MeshETS.h  MeshResourceETS.h  MorpherETS.h  NodeETS.h  PostProcessETS.h  PropertyProxy.h  QuatProxy.h  RenderConfigurationETS.h  RenderContextETS.h  RenderResources.h  RenderResourcesETS.h  SamplerETS.h  SceneComponentETS.h  SceneETS.h  SceneResourceETS.h  ShaderETS.h  SubMeshETS.h  TonemapETS.h  Utils.h  Vec2Proxy.h  Vec3Proxy.h  Vec4Proxy.h  VignetteETS.h
kits/ets/src/: AnimationETS.cpp  BloomETS.cpp  CameraETS.cpp  ColorFringeETS.cpp  ColorProxy.cpp  EffectETS.cpp  EnvironmentETS.cpp  GeometryETS.cpp  ImageETS.cpp  LightETS.cpp  MaterialETS.cpp  MaterialPropertyETS.cpp  MeshETS.cpp  MeshResourceETS.cpp  MorpherETS.cpp  NodeETS.cpp  PostProcessETS.cpp  PropertyProxy.cpp  QuatProxy.cpp  RenderConfigurationETS.cpp  RenderContextETS.cpp  RenderResources.cpp  RenderResourcesETS.cpp  SamplerETS.cpp  SceneComponentETS.cpp  SceneETS.cpp  SceneResourceETS.cpp  ShaderETS.cpp  SubMeshETS.cpp  TonemapETS.cpp  Vec2Proxy.cpp  Vec3Proxy.cpp  Vec4Proxy.cpp  VignetteETS.cpp
kits/ets/test/: BUILD.gn
kits/js/: AGENTS.md  BUILD.gn
kits/js/include/: AnimationJS.h  ArrayPropertyProxy.h  BaseObjectJS.h  BloomJS.h  BoidsSwarmPluginJS.h  CameraJS.h  ColorProxy.h  DisposeContainer.h  EffectJS.h  EnvironmentJS.h  GeometryJS.h  ImageJS.h  JsObjectCache.h  LightJS.h  MaterialJS.h  MaterialPropertyJS.h  MeshJS.h  MeshResourceJS.h  MorpherJS.h  NodeImpl.h  NodeJS.h  ObjectProxy.h  OcclusionMaterialJS.h  ParamParsing.h  PostProcJS.h  Promise.h  PromiseBase.h  PropertyProxy.h  QuatProxy.h  Raycast.h  RenderConfigurationJS.h  RenderContextJS.h  SamplerJS.h  SceneComponentJS.h  SceneJS.h  SceneResourceImpl.h  ShaderJS.h  SubMeshJS.h  TextNodeJS.h  ToneMapJS.h  (+9 more)
kits/js/napi/: native_module_export.cpp
kits/js/src/: AnimationJS.cpp  ArrayPropertyProxy.cpp  BaseObjectJS.cpp  BloomJS.cpp  BoidsSwarmPluginJS.cpp  CameraJS.cpp  ColorProxy.cpp  DisposeContainer.cpp  EffectJS.cpp  EnvironmentJS.cpp  (+43 more)
lume/: lume_config.gni
lume/LumeBase/: AGENTS.md  BUILD.gn
lume/LumeBinaryCompile/: BUILD.gn  README.md  build.sh  version.txt
lume/LumeBoidsSwarm/: .gitignore  BUILD.gn  CMakeLists.txt  version.cmake  version.cpp
lume/LumeDotfield/: BUILD.gn  CMakeLists.txt  version.cmake
lume/LumeEcsSerializer/: BUILD.gn  CMakeLists.txt
lume/LumeEngine/: AGENTS.md  BUILD.gn
lume/LumeFont/: BUILD.gn  version.cpp
lume/LumeJpg/: BUILD.gn  CMakeLists.txt  version.cmake
lume/LumeMRT/: BUILD.gn
lume/LumeMeta/: AGENTS.md  BUILD.gn
lume/LumePng/: BUILD.gn  CMakeLists.txt  version.cmake
lume/LumeRender/: AGENTS.md  BUILD.gn  version.cpp
lume/LumeScene/: AGENTS.md  BUILD.gn
lume/LumeTest/: image_manager_sync_test.cpp  iterator_sync_test.cpp  math_sync_test.cpp
lume/Lume_3D/: AGENTS.md  BUILD.gn  README.md  version.cpp
lume/Lume_3DText/: BUILD.gn  version.cpp
lume/metaobject/: BUILD.gn
lume/scenewidgetplugin/: BUILD.gn
(+4245 files in other folders)
