# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("//build/ohos.gni")
import("//foundation/graphic/graphic_3d/lume/lume_config.gni")

module_output_path = "graphic_3d/graphic_3d/3d_scene_adapter"

ohos_unittest("SceneAdapterUnitTest") {
  module_out_path = module_output_path
  include_dirs = [
    "//foundation/graphic/graphic_3d/3d_scene_adapter/include",
    "//foundation/graphic/graphic_3d/3d_widget_adapter/core/include",
    "//foundation/graphic/graphic_3d/3d_widget_adapter/include/ohos",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "scene_adapter_unit_test.cpp" ]

  defines = [
    "CORE_HAS_GLES_BACKEND=1",
    "CORE_HAS_VULKAN_BACKEND=1",
  ]

  defines += [ "LIB_ENGINE_CORE=${LIB_ENGINE_CORE}.z" ]

  if (target_cpu == "arm") {
    defines += [
      "PLATFORM_CORE_ROOT_PATH=/system/lib/",
      "PLATFORM_CORE_PLUGIN_PATH=/system/lib/graphics3d",
      "PLATFORM_APP_ROOT_PATH=/system/lib/",
      "PLATFORM_APP_PLUGIN_PATH=/system/lib/graphics3d",
    ]
  }

  if (target_cpu == "arm64") {
    defines += [
      "PLATFORM_CORE_ROOT_PATH=/system/lib64/",
      "PLATFORM_CORE_PLUGIN_PATH=/system/lib64/graphics3d/",
      "PLATFORM_APP_ROOT_PATH=/system/lib64/",
      "PLATFORM_APP_PLUGIN_PATH=/system/lib64/graphics3d/",
    ]
  }

  configs = [
    "//foundation/graphic/graphic_3d/3d_scene_adapter:lume3d_config",
    "//foundation/graphic/graphic_3d/3d_scene_adapter:scene_adapter_config",
    "//foundation/graphic/graphic_3d/3d_widget_adapter:widget_adapter_config",
  ]

  deps = [
    "//foundation/graphic/graphic_3d/3d_widget_adapter:lib3dWidgetAdapter"
  ]

  external_deps = [
    "ability_runtime:ability_manager",
    "ability_runtime:app_context",
    "ability_runtime:data_ability_helper",
    "ability_runtime:napi_base_context",
    "ability_runtime:napi_common",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "googletest:gmock",
    "googletest:gtest",
    "graphic_2d:EGL",
    "graphic_2d:GLESv3",
    "graphic_2d:librender_service_base",
    "graphic_2d:librender_service_client",
    "graphic_surface:surface",
    "graphic_surface:sync_fence",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "input:libmmi-client",
    "napi:ace_napi",
    "vulkan-headers:vulkan_headers",
  ]
  
  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

ohos_unittest("AGPOffscreenRenderUnitTest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/graphic/graphic_3d/3d_scene_adapter/include",
    "//foundation/graphic/graphic_3d/3d_widget_adapter/core/include",
    "//foundation/graphic/graphic_3d/3d_widget_adapter/include/ohos",
    "//foundation/graphic/graphic_3d/3d_scene_adapter/src",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "offscreen_render_unit_test.cpp",
    "//foundation/graphic/graphic_3d/3d_scene_adapter/src/offscreen_scene.cpp"
  ]

  defines = [
    "CORE_HAS_GLES_BACKEND=1",
    "CORE_HAS_VULKAN_BACKEND=1",
  ]

  defines += [
    "LIB_ENGINE_CORE=${LIB_ENGINE_CORE}.z",
    "private=public",
    "protected=public"
  ]

  if (target_cpu == "arm") {
    defines += [
      "PLATFORM_CORE_ROOT_PATH=/system/lib/",
      "PLATFORM_CORE_PLUGIN_PATH=/system/lib/graphics3d",
      "PLATFORM_APP_ROOT_PATH=/system/lib/",
      "PLATFORM_APP_PLUGIN_PATH=/system/lib/graphics3d",
    ]
  }

  if (target_cpu == "arm64") {
    defines += [
      "PLATFORM_CORE_ROOT_PATH=/system/lib64/",
      "PLATFORM_CORE_PLUGIN_PATH=/system/lib64/graphics3d/",
      "PLATFORM_APP_ROOT_PATH=/system/lib64/",
      "PLATFORM_APP_PLUGIN_PATH=/system/lib64/graphics3d/",
    ]
  }

  configs = [
    "//foundation/graphic/graphic_3d/3d_scene_adapter:lume3d_config",
    "//foundation/graphic/graphic_3d/3d_scene_adapter:scene_adapter_config",
    "//foundation/graphic/graphic_3d/3d_widget_adapter:widget_adapter_config",
  ]

  deps = [
    "//foundation/graphic/graphic_3d/3d_widget_adapter:lib3dWidgetAdapter",
    "//foundation/graphic/graphic_3d/lume/LumeScene:AGPSceneApi"
  ]

  external_deps = [
    "ability_runtime:ability_manager",
    "ability_runtime:app_context",
    "ability_runtime:data_ability_helper",
    "ability_runtime:napi_base_context",
    "ability_runtime:napi_common",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "googletest:gmock",
    "googletest:gtest",
    "graphic_2d:EGL",
    "graphic_2d:GLESv3",
    "graphic_2d:librender_service_base",
    "graphic_2d:librender_service_client",
    "graphic_surface:surface",
    "graphic_surface:sync_fence",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "input:libmmi-client",
    "napi:ace_napi",
    "vulkan-headers:vulkan_headers",
  ]
  
  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

ohos_unittest("SceneBridgeAniUnitTest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/graphic/graphic_3d/3d_scene_adapter/include",
    "//foundation/graphic/graphic_3d/3d_scene_adapter/src",
    "//foundation/graphic/graphic_3d/3d_widget_adapter/core/include",
    "//foundation/graphic/graphic_3d/3d_widget_adapter/include",
    "//foundation/graphic/graphic_3d/3d_widget_adapter/include/ohos",
  ]

  sources = [ "scene_bridge_ani_unit_test.cpp" ]

  deps = [
    "//foundation/graphic/graphic_3d/3d_widget_adapter:lib3dWidgetAdapter",
    "//foundation/graphic/graphic_3d/lume/LumeScene:AGPSceneApi"
  ]

  external_deps = [
    "hilog:libhilog",
    "napi:ace_napi",
    "runtime_core:ani",
    "runtime_core:ani_helpers",
  ]
  
  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

ohos_unittest("SceneBridgeUnitTest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/graphic/graphic_3d/3d_scene_adapter/include",
    "//foundation/graphic/graphic_3d/3d_scene_adapter/src",
    "//foundation/graphic/graphic_3d/3d_widget_adapter/core/include",
    "//foundation/graphic/graphic_3d/3d_widget_adapter/include",
    "//foundation/graphic/graphic_3d/3d_widget_adapter/include/ohos",
  ]

  sources = [ "scene_bridge_unit_test.cpp" ]

  deps = [
    "//foundation/graphic/graphic_3d/3d_widget_adapter:lib3dWidgetAdapter",
    "//foundation/graphic/graphic_3d/lume/LumeScene:AGPSceneApi"
  ]

  external_deps = [
    "hilog:libhilog",
    "napi:ace_napi",
    "runtime_core:ani",
    "runtime_core:ani_helpers",
  ]
  
  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

group("unittest") {
  testonly = true
  deps = [
    ":SceneAdapterUnitTest",
    ":AGPOffscreenRenderUnitTest",
    ":SceneBridgeAniUnitTest",
    ":SceneBridgeUnitTest"
  ]
}